Switch to using access token (#9)
* Switch to using access token
* Use release tag for GH actions
* Use push event scoped to master

--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -1,8 +1,7 @@
 name: Deployment
 
 on:
-  pull_request:
-    types: [closed]
+  push:
     branches:
       - master
 
@@ -16,8 +15,8 @@ jobs:
       - name: Build
         run: crystal docs
       - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@master
+        uses: JamesIves/github-pages-deploy-action@2.0.1
         env:
-          ACCESS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
           BRANCH: gh-pages
           FOLDER: docs
